Updated the folder structure to make it more organized

--- a/Anime_pages/death-note.html
+++ b/Anime_pages/death-note.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Death Note</title>
-    <link rel="stylesheet" href="Anime-Head.css">
-    <link rel="stylesheet" href="anime-page.css">
+    <link rel="stylesheet" href="../Anime-Head.css">
+    <link rel="stylesheet" href="../anime-page.css">
 </head>
 <body>
     <header>
