--- a/index.html
+++ b/index.html
@@ -47,42 +47,42 @@
             <div class="topic">
                 <h2>Top Rated</h2>
                 <div class="container">
-                    <a href="aot.html">
+                    <a href="Anime_pages/aot.html">
                         <div>
                             <img src="https://resizing.flixster.com/SEKqvD_3s-g47nWx0tsZykurPvQ=/206x305/v2/https://resizing.flixster.com/-XZAfHZM39UwaGJIFWKAE8fS0ak=/v3/t/assets/p10873160_b_v8_aa.jpg" alt="Attack on Titan">
                             <h3>Attack on Titan</h3>
                             <p>After his hometown is destroyed, young Eren Jaeger vows to cleanse the earth of the giant humanoid Titans that have brought humanity to the brink of extinction.</p>
                         </div>
                     </a>
-                    <a href="fmab.html">
+                    <a href="Anime_pages/fmab.html">
                         <div>
                             <img src="https://m.media-amazon.com/images/M/MV5BMzNiODA5NjYtYWExZS00OTc4LTg3N2ItYWYwYTUyYmM5MWViXkEyXkFqcGc@._V1_.jpg" alt="FMAB">
                             <h3>Fullmetal Alchemist: Brotherhood</h3>
                             <p>Two brothers search for a Philosopher's Stone after an attempt to revive their deceased mother goes awry and leaves them in damaged physical forms.</p>
                         </div>
                     </a>
-                    <a href="onepiece.html">
+                    <a href="Anime_pages/onepiece.html">
                         <div>
                             <img src="https://m.media-amazon.com/images/M/MV5BMTNjNGU4NTUtYmVjMy00YjRiLTkxMWUtNzZkMDNiYjZhNmViXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="One Piece">
                             <h3>One Piece</h3>
                             <p>Rubber-bodied dreamer Monkey D. Luffy gathers an eclectic pirate crew and braves the perilous Grand Line, battling tyrants and monsters to claim the legendary "One Piece" and become King of the Pirates.</p>
                         </div>
                     </a>
-                    <a href="HunterxHunter.html">
+                    <a href="Anime_pages/HunterxHunter.html">
                         <div>
                             <img src="https://cdn.anisearch.de/images/anime/cover/7/7963_600.webp" alt="Hunter x Hunter">
                             <h3>Hunter x Hunter</h3>
                             <p>Gon Freecss aspires to become a Hunter, an exceptional being capable of greatness. With his friends and his potential, he seeks out his father, who left him when he was younger.</p>
                         </div>
                     </a>
-                    <a href="bleach.html">
+                    <a href="Anime_pages/bleach.html">
                         <div>
                             <img src="https://m.media-amazon.com/images/M/MV5BOWQwOWY5NTUtMjAyZi00YjQzLTkwODgtNmQwZjU1MGIzZDhjXkEyXkFqcGc@._V1_.jpg" alt="Bleach">
                             <h3>Bleach</h3>
                             <p>High school student Ichigo Kurosaki, who has the ability to see ghosts, gains soul reaper powers from Rukia Kuchiki and sets out to save the world from "Hollows".</p>
                         </div>
                     </a>
-                    <a href="death-note.html">
+                    <a href="Anime_pages/death-note.html">
                         <div>
                             <img src="https://m.media-amazon.com/images/M/MV5BYTgyZDhmMTEtZDFhNi00MTc4LTg3NjUtYWJlNGE5Mzk2NzMxXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="Death Note">
                             <h3>Death Note</h3>
@@ -103,7 +103,7 @@
                             <p>In ancient China, a young boy dreams of becoming the greatest general of the Qin Kingdom.</p>
                         </div>
                     </a>
-                    <a href="onepiece.html">
+                    <a href="Anime_pages/onepiece.html">
                         <div>
                             <img src="https://m.media-amazon.com/images/M/MV5BMTNjNGU4NTUtYmVjMy00YjRiLTkxMWUtNzZkMDNiYjZhNmViXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="One Piece">
                             <h3>One Piece</h3>
@@ -124,7 +124,7 @@
                             <p>A superhero-admiring boy enrolls in a prestigious hero academy and learns what it really means to be a hero, after the strongest superhero grants him his own powers.    </p>
                         </div>
                     </a>
-                    <a href="tybw.html">
+                    <a href="Anime_pages/tybw.html">
                         <div>
                             <img src="https://cdn.myanimelist.net/images/anime/1908/135431.jpg" alt="Bleach: TYBW">
                             <h3>Bleach: Thousand-Year Blood War</h3>
