Fixed a bug in which, the trailers will expire after 24 hours by creating a new ui and sourcing the trailers from youtube instead of imdb which also resulted in more accurate trailers. Also added the reamaing anime webpages.

--- a/Anime_pages/Gachiakuta.html
+++ b/Anime_pages/Gachiakuta.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bleach</title>
+    <title>Gachiakuta</title>
     <link rel="stylesheet" href="../Anime-Head.css">
     <link rel="stylesheet" href="anime-page.css">
 </head>
@@ -42,13 +42,13 @@
     <main>
         <section>
             <div>
-                <img src="https://m.media-amazon.com/images/M/MV5BOWQwOWY5NTUtMjAyZi00YjQzLTkwODgtNmQwZjU1MGIzZDhjXkEyXkFqcGc@._V1_.jpg" alt="Bleach">
+                <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/acad8581f1a2eafa8c9d68b899bb1b21.jpg" alt="Gachiakuta">
             </div>
             <div>
-                <h1>Bleach</h1>
+                <h1>Gachitakuta</h1>
                 <h3>Synopsis:</h3>
                 <p>
-                    Ichigo Kurosaki is an ordinary high schooler—until his family is attacked by a Hollow, a corrupt spirit that seeks to devour human souls. It is then that he meets a Soul Reaper named Rukia Kuchiki, who gets injured while protecting Ichigo's family from the assailant. To save his family, Ichigo accepts Rukia's offer of taking her powers and becomes a Soul Reaper as a result. However, as Rukia is unable to regain her powers, Ichigo is given the daunting task of hunting down the Hollows that plague their town. However, he is not alone in his fight, as he is later joined by his friends—classmates Orihime Inoue, Yasutora Sado, and Uryuu Ishida—who each have their own unique abilities. As Ichigo and his comrades get used to their new duties and support each other on and off the battlefield, the young Soul Reaper soon learns that the Hollows are not the only real threat to the human world.
+                    Living in the slums of a wealthy town, Rudo and his foster father Regto try to coexist with the rest of the town's residents, but Rudo despises the wastefulness of the upper class. Ignoring the warnings from those around him, Rudo regularly rummages through the town's garbage in search of anything useful or valuable to save from the "Abyss"—a massive hole where anything considered trash is dumped, including people. Rudo's biological father was one such person, having been thrown into the Abyss after he was accused of murder. One day, after running into a mysterious figure on the way home, Rudo returns to find Regto's dying body on the floor. He is immediately found at the scene by the authorities and is charged with murder. No one believes his claims of innocence, and he is thrown into the Abyss. Instead of dying, however, he finds himself in a strange, foul-smelling place surrounded by monsters made out of trash. When Rudo is attacked by said monsters, he is saved by a man named Enjin, who reveals himself to be a "Cleaner"—someone who uses special weapons called Vital Instruments to combat these creatures. In order to get his revenge on the one who killed Regto, Rudo reluctantly becomes a Cleaner to fight his way back up and out of the Abyss.
                 </p>
             </div>
         </section>
@@ -56,18 +56,18 @@
             <div>
                 <h2>Details:</h2>
                 <p>
-                    <span>Aired:</span> Oct 5, 2004 to Mar 27, 2012<br>
-                    <span>Premiered:</span> Fall 2004<br>
+                    <span>Aired:</span> Jul 6, 2025 to Present<br>
+                    <span>Premiered:</span> Summer 2025<br>
                     <span>Duration:</span> 24m<br>
-                    <span>Status:</span> Finished Airing<br>
-                    <span>IMDB Score:</span> 8.2/10<br>
-                    <span>Genre:</span> Action, Adventure, Comedy, Drama, Shounen<br>
-                    <span>Studio:</span> Studio Pierrot
+                    <span>Status:</span> Currently Airing<br>
+                    <span>IMDB Score:</span> 8.1/10<br>
+                    <span>Genre:</span> Action, Fantasy, Drama, Shounen<br>
+                    <span>Studio:</span> Bones
                 </p>
             </div>
             <div class="trailer-heading">
                 <h2>Watch Trailer</h2>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/1HJs-quw61A?si=Fvc29QqVY3KrZu5K" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/yeRvDchyo44?si=Xqe7021mHtGqq-qR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
     </main>
