--- a/Anime_pages/HunterxHunter.html
+++ b/Anime_pages/HunterxHunter.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hunter x Hunter</title>
     <link rel="stylesheet" href="../Anime-Head.css">
-    <link rel="stylesheet" href="../anime-page.css">
+    <link rel="stylesheet" href="anime-page.css">
 </head>
 <body>
     <header>
         <nav>
-            <h1>Anime Guru</h1>
+            <a href="../index.html"><h1>Anime Guru</h1></a>
             <div>
                 <form>
                     <select name="genre" id="cat">
@@ -40,40 +40,47 @@
         </nav>
     </header>
     <main>
-        <div>
-            <img class="poster" src="https://cdn.anisearch.de/images/anime/cover/7/7963_600.webp" alt="Hunter x Hunter">
-            <a class="trailer" href="https://imdb-video.media-imdb.com/vi1267121689/1434659607842-pgv4ql-1585928266069.mp4?Expires=1761244593&Signature=C3r8Gyp8C3TZNlByDvA-l6P6~CmZZBbYQduUORjYx~hASwjhIU1Te0XTm~nzm64-hCdfvvKHC0tlTpZLKDfGbU3nI2s9Wvq~RXGsKREG2LXmJh3yIFjXpgbjqAY32jKDuLhsXS~Y2NS4u6gz82H0S9fkHmW3YlWNnMfi7vFnmmQswcLrW7TIrTOm8fbXZjYhBEvNJRar3u4JHFrGJy13a7RDldaBECaXu0IXkzP2K9XrBzS3NfG13TynQHKaOHhhd3gmd1r77Id-AcxF2Xg0XYzggxZl9XmNzHytti~1re2akxXpmktdajuFxLrOazQHiWvX6RlSZy-oMYZlKfutTg__&Key-Pair-Id=APKAIFLZBVQZ24NQH3KA" target="_blank">
-                <video src="https://imdb-video.media-imdb.com/vi1267121689/1434659607842-pgv4ql-1585928266069.mp4?Expires=1761244593&Signature=C3r8Gyp8C3TZNlByDvA-l6P6~CmZZBbYQduUORjYx~hASwjhIU1Te0XTm~nzm64-hCdfvvKHC0tlTpZLKDfGbU3nI2s9Wvq~RXGsKREG2LXmJh3yIFjXpgbjqAY32jKDuLhsXS~Y2NS4u6gz82H0S9fkHmW3YlWNnMfi7vFnmmQswcLrW7TIrTOm8fbXZjYhBEvNJRar3u4JHFrGJy13a7RDldaBECaXu0IXkzP2K9XrBzS3NfG13TynQHKaOHhhd3gmd1r77Id-AcxF2Xg0XYzggxZl9XmNzHytti~1re2akxXpmktdajuFxLrOazQHiWvX6RlSZy-oMYZlKfutTg__&Key-Pair-Id=APKAIFLZBVQZ24NQH3KA" autoplay muted loop></video>
-            </a>
-        </div>
         <section>
-            <h1>Hunter X Hunter</h1>
-            <h3>Synopsis:</h3>
-            <p>
-                Hunter x Hunter is set in a world where Hunters exist to perform all manner of 
-                dangerous tasks like capturing criminals and bravely searching for lost treasures 
-                in uncharted territories. Twelve-year-old Gon Freecss is determined to become the 
-                best Hunter possible in hopes of finding his father, who was a Hunter himself and 
-                had long ago abandoned his young son. However, Gon soon realizes the path to 
-                achieving his goals is far more challenging than he could have ever imagined. 
-                Along the way to becoming an official Hunter, Gon befriends the lively 
-                doctor-in-training Leorio, vengeful Kurapika, and rebellious ex-assassin Killua. 
-                To attain their own goals and desires, together the four of them take the Hunter 
-                Exam, notorious for its low success rate and high probability of death. Throughout 
-                their journey, Gon and his friends embark on an adventure that puts them through
-                 many hardships and struggles. They will meet a plethora of monsters, creatures, 
-                 and characters—all while learning what being a Hunter truly means.
-            </p>
-            <h3>Details:</h3>
-            <p>
-                <span>Aired:</span> Oct 2, 2011 to Sep 24, 2014<br>
-                <span>Premiered:</span> Fall 2011<br>
-                <span>Duration:</span> 23m<br>
-                <span>Status:</span> Finished Airing<br>
-                <span>IMDB Score:</span> 9.0/10<br>
-                <span>Genre:</span> Action, Adventure, Fantasy, Shounen<br>
-                <span>Studio:</span> Madhouse
-            </p>
+            <div>
+                <img src="https://cdn.anisearch.de/images/anime/cover/7/7963_600.webp" alt="Hunter x Hunter">
+            </div>
+            <div>
+                <h1>Hunter X Hunter</h1>
+                <h3>Synopsis:</h3>
+                <p>
+                    Hunter x Hunter is set in a world where Hunters exist to perform all manner of 
+                    dangerous tasks like capturing criminals and bravely searching for lost treasures 
+                    in uncharted territories. Twelve-year-old Gon Freecss is determined to become the 
+                    best Hunter possible in hopes of finding his father, who was a Hunter himself and 
+                    had long ago abandoned his young son. However, Gon soon realizes the path to 
+                    achieving his goals is far more challenging than he could have ever imagined. 
+                    Along the way to becoming an official Hunter, Gon befriends the lively 
+                    doctor-in-training Leorio, vengeful Kurapika, and rebellious ex-assassin Killua. 
+                    To attain their own goals and desires, together the four of them take the Hunter 
+                    Exam, notorious for its low success rate and high probability of death. Throughout 
+                    their journey, Gon and his friends embark on an adventure that puts them through
+                    many hardships and struggles. They will meet a plethora of monsters, creatures, 
+                    and characters—all while learning what being a Hunter truly means.
+                </p>
+            </div>
+        </section>
+        <section>
+            <div>
+                <h2>Details:</h2>
+                <p>
+                    <span>Aired:</span> Oct 2, 2011 to Sep 24, 2014<br>
+                    <span>Premiered:</span> Fall 2011<br>
+                    <span>Duration:</span> 23m<br>
+                    <span>Status:</span> Finished Airing<br>
+                    <span>IMDB Score:</span> 9.0/10<br>
+                    <span>Genre:</span> Action, Adventure, Fantasy, Shounen<br>
+                    <span>Studio:</span> Madhouse
+                </p>
+            </div>
+            <div class="trailer-heading">
+                <h2>Watch Trailer</h2>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/d6kBeJjTGnY?si=8AcycqwGGPyrEgfQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
         </section>
     </main>
 </body>
