--- a/Anime_pages/aot.html
+++ b/Anime_pages/aot.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Attack on Titan</title>
     <link rel="stylesheet" href="../Anime-Head.css">
-    <link rel="stylesheet" href="../anime-page.css">
+    <link rel="stylesheet" href="anime-page.css">
 </head>
 <body>
     <header>
         <nav>
-            <h1>Anime Guru</h1>
+            <a href="../index.html"><h1>Anime Guru</h1></a>
             <div>
                 <form>
                     <select name="genre" id="cat">
@@ -39,38 +39,45 @@
             </div>
         </nav>
     </header>
-    <main>
-        <div>
-            <img class="poster" src="https://resizing.flixster.com/SEKqvD_3s-g47nWx0tsZykurPvQ=/206x305/v2/https://resizing.flixster.com/-XZAfHZM39UwaGJIFWKAE8fS0ak=/v3/t/assets/p10873160_b_v8_aa.jpg" alt="Attack on Titan">
-            <a class="trailer" href="https://imdb-video.media-imdb.com/vi3191457561/1434659607842-pgv4ql-1699022181383.mp4?Expires=1761247069&Signature=jqjuStmY~re2jHoYO9rVvmj2~d5Fqh-MP228NEU1IUQVQGL7QvEcLIH7w5YjHdbe1T33Vchz~w8ML27nngdC9axaa9lGGJ3sK-T6vptWl36JYylyliD1nrtxSarCY0G71CdfBOYbilJvBvQJKWU1DxA2jif7RL3TrunCZuXuDhkpKB4QDsroofYkHCEJXBwXx2ZG7jDzF0ZtOPtswGfEYEgVIybr2K6eq50uLfa~pgKBzwDLeJ4xFX~8qNzPbDlXmQ9hOdGrcnnjlkTzwJbeIOol96kv~9FHn0HSzwE02U27QvI8knvh2rwhbbNJoizw4H3lAM5IARpYggkaRVdD2Q__&Key-Pair-Id=APKAIFLZBVQZ24NQH3KA" target="_blank">
-                <video src="https://imdb-video.media-imdb.com/vi3191457561/1434659607842-pgv4ql-1699022181383.mp4?Expires=1761247069&Signature=jqjuStmY~re2jHoYO9rVvmj2~d5Fqh-MP228NEU1IUQVQGL7QvEcLIH7w5YjHdbe1T33Vchz~w8ML27nngdC9axaa9lGGJ3sK-T6vptWl36JYylyliD1nrtxSarCY0G71CdfBOYbilJvBvQJKWU1DxA2jif7RL3TrunCZuXuDhkpKB4QDsroofYkHCEJXBwXx2ZG7jDzF0ZtOPtswGfEYEgVIybr2K6eq50uLfa~pgKBzwDLeJ4xFX~8qNzPbDlXmQ9hOdGrcnnjlkTzwJbeIOol96kv~9FHn0HSzwE02U27QvI8knvh2rwhbbNJoizw4H3lAM5IARpYggkaRVdD2Q__&Key-Pair-Id=APKAIFLZBVQZ24NQH3KA" autoplay muted loop></video>
-            </a>
-        </div>
+    <main>    
         <section>
-            <h1>Attack on Titan</h1>
-            <h3>Synopsis:</h3>
-            <p>
-                Centuries ago, mankind was slaughtered to near extinction by monstrous humanoid creatures called titans, forcing humans to hide 
-                in fear behind enormous concentric walls. What makes these giants truly terrifying is that their taste for human flesh is not 
-                born out of hunger but what appears to be out of pleasure. To ensure their survival, the remnants of humanity began living 
-                within defensive barriers, resulting in one hundred years without a single titan encounter. However, that fragile calm is soon 
-                shattered when a colossal titan manages to breach the supposedly impregnable outer wall, reigniting the fight for survival 
-                against the man-eating abominations. After witnessing a horrific personal loss at the hands of the invading creatures, 
-                Eren Yeager dedicates his life to their eradication by enlisting into the Survey Corps, an elite military unit that combats the 
-                merciless humanoids outside the protection of the walls. Based on Hajime Isayama's award-winning manga, Shingeki no Kyojin 
-                follows Eren, along with his adopted sister Mikasa Ackerman and his childhood friend Armin Arlert, as they join the brutal war 
-                against the titans and race to discover a way of defeating them before the last walls are breached.
-            </p>
-            <h3>Details:</h3>
-            <p>
-                <span>Aired:</span> April 7, 2013, to November 5, 2023<br>
-                <span>Premiered:</span> Spring 2013<br>
-                <span>Duration:</span> 24m<br>
-                <span>Status:</span> Finished Airing<br>
-                <span>IMDB Score:</span> 9.1/10<br>
-                <span>Genre:</span> Action, Mystery, Military, Drama, Fantasy, Shounen<br>
-                <span>Studio:</span> Wit Studio, MAPPA
-            </p>
+            <div>
+                <img src="https://resizing.flixster.com/SEKqvD_3s-g47nWx0tsZykurPvQ=/206x305/v2/https://resizing.flixster.com/-XZAfHZM39UwaGJIFWKAE8fS0ak=/v3/t/assets/p10873160_b_v8_aa.jpg" alt="Attack on Titan">
+            </div>
+            <div>
+                <h1>Attack on Titan</h1>
+                <h3>Synopsis:</h3>
+                <p>
+                    Centuries ago, mankind was slaughtered to near extinction by monstrous humanoid creatures called titans, forcing humans to hide 
+                    in fear behind enormous concentric walls. What makes these giants truly terrifying is that their taste for human flesh is not 
+                    born out of hunger but what appears to be out of pleasure. To ensure their survival, the remnants of humanity began living 
+                    within defensive barriers, resulting in one hundred years without a single titan encounter. However, that fragile calm is soon 
+                    shattered when a colossal titan manages to breach the supposedly impregnable outer wall, reigniting the fight for survival 
+                    against the man-eating abominations. After witnessing a horrific personal loss at the hands of the invading creatures, 
+                    Eren Yeager dedicates his life to their eradication by enlisting into the Survey Corps, an elite military unit that combats the 
+                    merciless humanoids outside the protection of the walls. Based on Hajime Isayama's award-winning manga, Shingeki no Kyojin 
+                    follows Eren, along with his adopted sister Mikasa Ackerman and his childhood friend Armin Arlert, as they join the brutal war 
+                    against the titans and race to discover a way of defeating them before the last walls are breached.
+                </p>
+            </div>
+        </section>
+        <section>
+            <div>
+                <h2>Details:</h2>
+                <p>
+                    <span>Aired:</span> April 7, 2013, to November 5, 2023<br>
+                    <span>Premiered:</span> Spring 2013<br>
+                    <span>Duration:</span> 24m<br>
+                    <span>Status:</span> Finished Airing<br>
+                    <span>IMDB Score:</span> 9.1/10<br>
+                    <span>Genre:</span> Action, Mystery, Military, Drama, Fantasy, Shounen<br>
+                    <span>Studio:</span> Wit Studio, MAPPA
+                </p>
+            </div>
+            <div class="trailer-heading">
+                <h2>Watch Trailer</h2>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/af6O_McpSEA?si=L4uANgpoQBYNaLeC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
         </section>
     </main>
 </body>
