--- a/Anime_pages/kingdom.html
+++ b/Anime_pages/kingdom.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Death Note</title>
+    <title>Kingdom</title>
     <link rel="stylesheet" href="../Anime-Head.css">
     <link rel="stylesheet" href="anime-page.css">
 </head>
@@ -42,13 +42,13 @@
     <main>
         <section>
             <div>
-                <img src="https://m.media-amazon.com/images/M/MV5BYTgyZDhmMTEtZDFhNi00MTc4LTg3NjUtYWJlNGE5Mzk2NzMxXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="Death Note">
+                <img src="https://cdn.myanimelist.net/images/anime/1282/151476.jpg" alt="Kingdom">
             </div>
             <div>
-                <h1>Death Note</h1>
+                <h1>Kingdom 6th Season</h1>
                 <h3>Synopsis:</h3>
                 <p>
-                    A shinigami, as a god of death, can kill any person—provided they see their victim's face and write their victim's name in a notebook called a Death Note. One day, Ryuk, bored by the shinigami lifestyle and interested in seeing how a human would use a Death Note, drops one into the human realm. High school student and prodigy Light Yagami stumbles upon the Death Note and—since he deplores the state of the world—tests the deadly notebook by writing a criminal's name in it. When the criminal dies immediately following his experiment with the Death Note, Light is greatly surprised and quickly recognizes how devastating the power that has fallen into his hands could be. With this divine capability, Light decides to extinguish all criminals in order to build a new world where crime does not exist and people worship him as a god. Police, however, quickly discover that a serial killer is targeting criminals and, consequently, try to apprehend the culprit. To do this, the Japanese investigators count on the assistance of the best detective in the world: a young and eccentric man known only by the name of L.
+                    In ancient China, during the Warring States period, a former servant named Xin rises through the ranks with a dream: to become the greatest general under the heavens. Fighting alongside King Ying Zheng of Qin—who seeks to unify China and end the chaos—Xin leads his own unit, the Fei Xin Force, onto the battlefield. With power reclaimed from the influential Chancellor Buwei Lü, King Ying Zheng begins laying the groundwork for a new, unified legal state with the support of key allies like strategist Changping Jun and legalist Li Si. As Qin launches a campaign to seize new territory from the state of Zhao, their advance is halted by the brilliant strategist, Li Mu. In response, Changping Jun devises a bold plan: to bypass Zhao's defenses and strike at the key city of Gyou, near Zhao's capital. To carry out this risky maneuver, a powerful coalition army is formed—led by the tacticians Ou Sen (Wang Jian), Kan Ki (Huan Yi), and the warrior queen Yo Tan Wa (Yang Duanhe). Joining them are the next generation of Qin commanders: Xin's Fei Xin Force, Mou Ten (Meng Tian)'s Gaku Ka Unit, and Ou Hon (Wang Ben)'s Gyoku Hou Unit, each operating independently. The fierce battle for Gyou begins, as the future of Qin's unification hangs in the balance.
                 </p>
             </div>
         </section>
@@ -56,18 +56,18 @@
             <div>
                 <h2>Details:</h2>
                 <p>
-                    <span>Aired:</span> Oct 4, 2006 to Jun 27, 2007<br>
-                    <span>Premiered:</span> Fall 2006<br>
-                    <span>Duration:</span> 23m<br>
-                    <span>Status:</span> Finished Airing<br>
-                    <span>IMDB Score:</span> 8.9/10<br>
-                    <span>Genre:</span> Mystery, Supernatural, Police, Psychological, Thriller, Shounen<br>
+                    <span>Aired:</span> Oct 5, 2025 to Present<br>
+                    <span>Premiered:</span> Fall 2025<br>
+                    <span>Duration:</span> 24m<br>
+                    <span>Status:</span> Currently Airing<br>
+                    <span>IMDB Score:</span> 8.7/10<br>
+                    <span>Genre:</span> Action, Adventure, Fantasy, Shounen<br>
                     <span>Studio:</span> Madhouse
                 </p>
             </div>
             <div class="trailer-heading">
                 <h2>Watch Trailer</h2>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/BHUPZpSKkhk?si=HuVJ6XMF1s9lOU6N" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/o_8rPkAVpQI?si=h4OpxndmBZqn4vQr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
     </main>
