--- a/Anime_pages/onepiece.html
+++ b/Anime_pages/onepiece.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>One Piece</title>
     <link rel="stylesheet" href="../Anime-Head.css">
-    <link rel="stylesheet" href="../anime-page.css">
+    <link rel="stylesheet" href="anime-page.css">
 </head>
 <body>
     <header>
         <nav>
-            <h1>Anime Guru</h1>
+            <a href="../index.html"><h1>Anime Guru</h1></a>
             <div>
                 <form>
                     <select name="genre" id="cat">
@@ -40,26 +40,35 @@
         </nav>
     </header>
     <main>
-        <div>
-            <img class="poster" src="https://m.media-amazon.com/images/M/MV5BMTNjNGU4NTUtYmVjMy00YjRiLTkxMWUtNzZkMDNiYjZhNmViXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="One Piece">
-            <a class="trailer" href="https://imdb-video.media-imdb.com/vi1913960985/1434659607842-pgv4ql-1564065260545.mp4?Expires=1761247114&Signature=nhC4OLdr9ynGRUfc6MlEFdzIB~WKWBtfBbYfV8FBbv~NK9FIWmYzxcNLFdVJ4oQi3avZebmCtEcNh6tegqZyMCa~LwDXDoIbPOQNtAOEE4hpxnjn2S-ZM5YNysUyfiJyPwc4GUB8WJo-NSwhfZdd8uZW52-cvqLY~-ALnrTwYPfsv3lx6r40Z4At7rLiWbFIoauG5HiEc0ZOAwoEuzR7rULxBmogJJt~e2tIGdM3aiE6XAOa4l4e7UoLYEZKfBeFp-CQq32nu-XU1FIeN5RMDb5BbeI3N~PSuntLiVOgzNATDei0khwTU-W-5N5TY3TZ3gCgKCYYsKd3jXqbvSPFRg__&Key-Pair-Id=APKAIFLZBVQZ24NQH3KA" target="_blank">
-                <video src="https://imdb-video.media-imdb.com/vi1913960985/1434659607842-pgv4ql-1564065260545.mp4?Expires=1761247114&Signature=nhC4OLdr9ynGRUfc6MlEFdzIB~WKWBtfBbYfV8FBbv~NK9FIWmYzxcNLFdVJ4oQi3avZebmCtEcNh6tegqZyMCa~LwDXDoIbPOQNtAOEE4hpxnjn2S-ZM5YNysUyfiJyPwc4GUB8WJo-NSwhfZdd8uZW52-cvqLY~-ALnrTwYPfsv3lx6r40Z4At7rLiWbFIoauG5HiEc0ZOAwoEuzR7rULxBmogJJt~e2tIGdM3aiE6XAOa4l4e7UoLYEZKfBeFp-CQq32nu-XU1FIeN5RMDb5BbeI3N~PSuntLiVOgzNATDei0khwTU-W-5N5TY3TZ3gCgKCYYsKd3jXqbvSPFRg__&Key-Pair-Id=APKAIFLZBVQZ24NQH3KA" autoplay muted loop></video>
-            </a>
-        </div>
         <section>
-            <h1>One Piece</h1>
-            <h3>Synopsis:</h3>
-            <p>Gold Roger was known as the "Pirate King," the strongest and most infamous being to have sailed the Grand Line. The capture and execution of Roger by the World Government brought a change throughout the world. His last words before his death revealed the existence of the greatest treasure in the world, One Piece. It was this revelation that brought about the Grand Age of Pirates, men who dreamed of finding One Piece—which promises an unlimited amount of riches and fame—and quite possibly the pinnacle of glory and the title of the Pirate King. Enter Monkey Luffy, a 17-year-old boy who defies your standard definition of a pirate. Rather than the popular persona of a wicked, hardened, toothless pirate ransacking villages for fun, Luffy's reason for being a pirate is one of pure wonder: the thought of an exciting adventure that leads him to intriguing people and ultimately, the promised treasure. Following in the footsteps of his childhood hero, Luffy and his crew travel across the Grand Line, experiencing crazy adventures, unveiling dark mysteries and battling strong enemies, all in order to reach the most coveted of all fortunes—<span>One Piece.</span></p>
-            <h3>Details:</h3>
-            <p>
-                <span>Aired:</span> Oct 20, 1999 to Present<br>
-                <span>Premiered:</span> Fall 1999<br>
-                <span>Duration:</span> 24m<br>
-                <span>Status:</span> Currently Airing<br>
-                <span>IMDB Score:</span> 9.0/10<br>
-                <span>Genre:</span> Action, Comedy, Adventure, Drama, Fantasy, Shounen<br>
-                <span>Studio:</span> Toei Animation
-            </p>
+            <div>
+                <img src="https://m.media-amazon.com/images/M/MV5BMTNjNGU4NTUtYmVjMy00YjRiLTkxMWUtNzZkMDNiYjZhNmViXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="One Piece">
+            </div>
+            <div>
+                <h1>One Piece</h1>
+                <h3>Synopsis:</h3>
+                <p>
+                    Gold Roger was known as the "Pirate King," the strongest and most infamous being to have sailed the Grand Line. The capture and execution of Roger by the World Government brought a change throughout the world. His last words before his death revealed the existence of the greatest treasure in the world, One Piece. It was this revelation that brought about the Grand Age of Pirates, men who dreamed of finding One Piece—which promises an unlimited amount of riches and fame—and quite possibly the pinnacle of glory and the title of the Pirate King. Enter Monkey Luffy, a 17-year-old boy who defies your standard definition of a pirate. Rather than the popular persona of a wicked, hardened, toothless pirate ransacking villages for fun, Luffy's reason for being a pirate is one of pure wonder: the thought of an exciting adventure that leads him to intriguing people and ultimately, the promised treasure. Following in the footsteps of his childhood hero, Luffy and his crew travel across the Grand Line, experiencing crazy adventures, unveiling dark mysteries and battling strong enemies, all in order to reach the most coveted of all fortunes—<span>One Piece.</span>
+                </p>
+            </div>
+        </section>
+        <section>
+            <div>
+                <h2>Details:</h2>
+                <p>
+                    <span>Aired:</span> Oct 20, 1999 to Present<br>
+                    <span>Premiered:</span> Fall 1999<br>
+                    <span>Duration:</span> 24m<br>
+                    <span>Status:</span> Currently Airing<br>
+                    <span>IMDB Score:</span> 9.0/10<br>
+                    <span>Genre:</span> Action, Comedy, Adventure, Drama, Fantasy, Shounen<br>
+                    <span>Studio:</span> Toei Animation
+                </p>
+            </div>
+            <div class="trailer-heading">
+                <h2>Watch Trailer</h2>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/MCb13lbVGE0?si=TO292iyYX_CgYN1w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
         </section>
     </main>
 </body>
