--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
     <header>
         <nav>
-            <h1>Anime Guru</h1>
+            <a href="index.html"><h1 style="padding-bottom: 3%; padding-top: 0;">Anime Guru</h1></a>
             <div>
-                <form>
+                <form style="padding-top: 2%">
                     <select name="genre" id="cat">
                         <option value="">Genre</option>
                         <option value="action">Action</option>
@@ -32,8 +32,8 @@
                         <option value="music">Music</option>
                     </select>
                 </form>
-                <a>Random</a>
-                <a href="login.html">Community</a>
+                <a style="padding-top: 2%">Random</a>
+                <a style="padding-top: 2%" href="login.html">Community</a>
             </div>
             <input type="search" placeholder="Search Anime">
             <div>
@@ -96,7 +96,7 @@
             <div class="topic">
                 <h2>Top Airing</h2>
                 <div class="container">
-                    <a>
+                    <a href="Anime_pages/kingdom.html">
                         <div>
                             <img src="https://cdn.myanimelist.net/images/anime/1282/151476.jpg" alt="Kingdom">
                             <h3>Kingdom 6th Season</h3>
@@ -110,14 +110,14 @@
                             <p>Rubber-bodied dreamer Monkey D. Luffy gathers an eclectic pirate crew and braves the perilous Grand Line, battling tyrants and monsters to claim the legendary "One Piece" and become King of the Pirates.</p>
                         </div>
                     </a>
-                    <a>
+                    <a href="Anime_pages/Gachiakuta.html">
                         <div>
                             <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/acad8581f1a2eafa8c9d68b899bb1b21.jpg" alt="Gachiakuta">
                             <h3>Gachiakuta</h3>
                             <p>In a floating city, a young boy is framed for the death of his father and exiled. He ends up in a junkyard zone, and swears to return for revenge.</p>
                         </div>
                     </a>
-                    <a>
+                    <a href="Anime_pages/mha.html">
                         <div>
                             <img src="https://cdn.myanimelist.net/images/anime/1959/151055.jpg" alt="MHA">
                             <h3>My Hero Academia: Final Season</h3>
@@ -131,10 +131,10 @@
                             <p>The peace is suddenly broken when warning sirens blare through the Soul Society. Residents are disappearing without a trace and nobody knows who's behind it. Meanwhile, a darkness is approaching Ichigo and his friends in Karakura Town.</p>
                         </div>
                     </a>
-                    <a>
+                    <a href="Anime_pages/SpyxFamily.html">
                         <div>
                             <img src="https://cdn.myanimelist.net/images/anime/1697/151793.jpg" alt="SpyxFamily">
-                            <h3>Spy x Family Season 3</h3>
+                            <h3>Spy x Family Season: 3</h3>
                             <p>A spy on an undercover mission gets married and adopts a child as part of his cover. His wife and daughter have secrets of their own, and all three must strive to keep together.</p>
                         </div>
                     </a>
