--- a/Anime_pages/SpyxFamily.html
+++ b/Anime_pages/SpyxFamily.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bleach:TYBW</title>
+    <title>Spy x Family</title>
     <link rel="stylesheet" href="../Anime-Head.css">
     <link rel="stylesheet" href="anime-page.css">
 </head>
@@ -42,13 +42,13 @@
     <main>
         <section>
             <div>
-                <img src="https://cdn.myanimelist.net/images/anime/1908/135431.jpg" alt="Bleach: TYBW">
+                <img src="https://cdn.myanimelist.net/images/anime/1697/151793.jpg" alt="SpyxFamily">
             </div>
             <div>
-                <h1>Bleach: Thousand Year Blood War</h1>
-                <h3>Synopsis:</h3>
-                <p>
-                    Substitute Soul Reaper Ichigo Kurosaki spends his days fighting against Hollows, dangerous evil spirits that threaten Karakura Town. Ichigo carries out his quest with his closest allies: Orihime Inoue, his childhood friend with a talent for healing; Yasutora Sado, his high school classmate with superhuman strength; and Uryuu Ishida, Ichigo's Quincy rival. Ichigo's vigilante routine is disrupted by the sudden appearance of Asguiaro Ebern, a dangerous Arrancar who heralds the return of Yhwach, an ancient Quincy king. Yhwach seeks to reignite the historic blood feud between Soul Reaper and Quincy, and he sets his sights on erasing both the human world and the Soul Society for good. Yhwach launches a two-pronged invasion into both the Soul Society and Hueco Mundo, the home of Hollows and Arrancar. In retaliation, Ichigo and his friends must fight alongside old allies and enemies alike to end Yhwach's campaign of carnage before the world itself comes to an end.
+                <h1>Spy X Family: Season 3</h1>
+                <h3 style="margin-top: 3vh;">Synopsis:</h3>
+                <p style="line-height: 2rem;">
+                    The third season of SPY×FAMILY. World peace is at stake and secret agent Twilight must undergo his most difficult mission yet—pretend to be a family man. Posing as a loving husband and father, he’ll infiltrate an elite school to get close to a high-profile politician. He has the perfect cover, except his wife’s a deadly assassin and neither knows each other’s identity. But someone does, his adopted daughter who’s a telepath!
                 </p>
             </div>
         </section>
@@ -56,18 +56,18 @@
             <div>
                 <h2>Details:</h2>
                 <p>
-                    <span>Aired:</span> Oct 10, 2022 to Present<br>
-                    <span>Premiered:</span> Fall 2022<br>
-                    <span>Duration:</span> 23m<br>
-                    <span>Status:</span> On Break<br>
-                    <span>IMDB Score:</span> 9.0/10<br>
-                    <span>Genre:</span> Action, Adventure, Comedy, Drama, Shounen<br>
-                    <span>Studio:</span> Studio Pierrot
+                    <span>Aired:</span> Oct 4, 2025 to Present<br>
+                    <span>Premiered:</span> Fall 2025<br>
+                    <span>Duration:</span> 24m<br>
+                    <span>Status:</span> Currently Airing<br>
+                    <span>IMDB Score:</span> 8.2/10<br>
+                    <span>Genre:</span> Action, Comedy, Slice of Life, Supernatural<br>
+                    <span>Studio:</span> Wit Studios, Cloverworks
                 </p>
             </div>
             <div class="trailer-heading">
                 <h2>Watch Trailer</h2>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Pi_sIP-wjC0?si=pwjqQme1UG5Gcpjp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/5ASJJI_RkiA?si=gWh3rcZOlQavm2w-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
     </main>
