--- a/Anime_pages/fmab.html
+++ b/Anime_pages/fmab.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fullmetal Alchemist:Brotherhood</title>
     <link rel="stylesheet" href="../Anime-Head.css">
-    <link rel="stylesheet" href="../anime-page.css">
+    <link rel="stylesheet" href="anime-page.css">
 </head>
 <body>
     <header>
         <nav>
-            <h1>Anime Guru</h1>
+            <a href="../index.html"><h1>Anime Guru</h1></a>
             <div>
                 <form>
                     <select name="genre" id="cat">
@@ -40,28 +40,35 @@
         </nav>
     </header>
     <main>
-        <div>
-            <img class="poster" src="https://m.media-amazon.com/images/M/MV5BMzNiODA5NjYtYWExZS00OTc4LTg3N2ItYWYwYTUyYmM5MWViXkEyXkFqcGc@._V1_.jpg" alt="FMAB">
-            <a class="trailer" href="https://imdb-video.media-imdb.com/vi4196311833/1434659607842-pgv4ql-1563465397646.mp4?Expires=1761244800&Signature=HGg~IeIzHeIgnSyg3uAXvqzcf-SmmCGQHKOaWMzmS8QvWx1rBsbmFoD2pNKLnXD-DZSx88CKgnAkCXE84JKI3vkfa0BSDp3QIGWaPzzaQWj4GA9GPwIF3vbzh9nZrKe1-pAfaMQjyCDslZBxIs~i3SE83Od5hIQeYXS0sc33eiUmYXmyP3f7J6t-PvYxRg~j2uWyS5xWfNCNxe-VySXnxfTFMpmh4zGbhJObWN~ibvCXJlc9qn4Eu1PUO7b4vut26rTYfLnyvza~VTNJ0HRrqH3zlY72Rfy0ags-qZYtfXutOf59EpwhlD0~Nrfb9xChlF-yWvXEpmguVOyRRoDMYg__&Key-Pair-Id=APKAIFLZBVQZ24NQH3KA" target="_blank">
-                <video src="https://imdb-video.media-imdb.com/vi4196311833/1434659607842-pgv4ql-1563465397646.mp4?Expires=1761244800&Signature=HGg~IeIzHeIgnSyg3uAXvqzcf-SmmCGQHKOaWMzmS8QvWx1rBsbmFoD2pNKLnXD-DZSx88CKgnAkCXE84JKI3vkfa0BSDp3QIGWaPzzaQWj4GA9GPwIF3vbzh9nZrKe1-pAfaMQjyCDslZBxIs~i3SE83Od5hIQeYXS0sc33eiUmYXmyP3f7J6t-PvYxRg~j2uWyS5xWfNCNxe-VySXnxfTFMpmh4zGbhJObWN~ibvCXJlc9qn4Eu1PUO7b4vut26rTYfLnyvza~VTNJ0HRrqH3zlY72Rfy0ags-qZYtfXutOf59EpwhlD0~Nrfb9xChlF-yWvXEpmguVOyRRoDMYg__&Key-Pair-Id=APKAIFLZBVQZ24NQH3KA" autoplay muted loop></video>
-            </a>
-        </div>
         <section>
-            <h1>Fullmetal Alchemist: Brotherhood</h1>
-            <h3>Synopsis:</h3>
-            <p>
-                "In order for something to be obtained, something of equal value must be lost." Alchemy is bound by this Law of Equivalent Exchange—something the young brothers Edward and Alphonse Elric only realize after attempting human transmutation: the one forbidden act of alchemy. They pay a terrible price for their transgression—Edward loses his left leg, Alphonse his physical body. It is only by the desperate sacrifice of Edward's right arm that he is able to affix Alphonse's soul to a suit of armor. Devastated and alone, it is the hope that they would both eventually return to their original bodies that gives Edward the inspiration to obtain metal limbs called "automail" and become a state alchemist, the Fullmetal Alchemist. Three years of searching later, the brothers seek the Philosopher's Stone, a mythical relic that allows an alchemist to overcome the Law of Equivalent Exchange. Even with military allies Colonel Roy Mustang, Lieutenant Riza Hawkeye, and Lieutenant Colonel Maes Hughes on their side, the brothers find themselves caught up in a nationwide conspiracy that leads them not only to the true nature of the elusive Philosopher's Stone, but their country's murky history as well. In between finding a serial killer and racing against time, Edward and Alphonse must ask themselves if what they are doing will make them human again... or take away their humanity.
-            </p>
-            <h3>Details:</h3>
-            <p>
-                <span>Aired:</span> Apr 5, 2009 to Jul 4, 2010<br>
-                <span>Premiered:</span> Spring 2009<br>
-                <span>Duration:</span> 24m<br>
-                <span>Status:</span> Finished Airing<br>
-                <span>IMDB Score:</span> 9.1/10<br>
-                <span>Genre:</span> Action, Adventure, Comedy, Drama, Magic, Military, Fantasy, Shounen<br>
-                <span>Studio:</span> Bones
-            </p>
+            <div>
+                <img src="https://m.media-amazon.com/images/M/MV5BMzNiODA5NjYtYWExZS00OTc4LTg3N2ItYWYwYTUyYmM5MWViXkEyXkFqcGc@._V1_.jpg" alt="FMAB">
+            </div>
+            <div>
+                <h1>Fullmetal Alchemist: Brotherhood</h1>
+                <h3>Synopsis:</h3>
+                <p>
+                    "In order for something to be obtained, something of equal value must be lost." Alchemy is bound by this Law of Equivalent Exchange—something the young brothers Edward and Alphonse Elric only realize after attempting human transmutation: the one forbidden act of alchemy. They pay a terrible price for their transgression—Edward loses his left leg, Alphonse his physical body. It is only by the desperate sacrifice of Edward's right arm that he is able to affix Alphonse's soul to a suit of armor. Devastated and alone, it is the hope that they would both eventually return to their original bodies that gives Edward the inspiration to obtain metal limbs called "automail" and become a state alchemist, the Fullmetal Alchemist. Three years of searching later, the brothers seek the Philosopher's Stone, a mythical relic that allows an alchemist to overcome the Law of Equivalent Exchange. Even with military allies Colonel Roy Mustang, Lieutenant Riza Hawkeye, and Lieutenant Colonel Maes Hughes on their side, the brothers find themselves caught up in a nationwide conspiracy that leads them not only to the true nature of the elusive Philosopher's Stone, but their country's murky history as well. In between finding a serial killer and racing against time, Edward and Alphonse must ask themselves if what they are doing will make them human again... or take away their humanity.
+                </p>
+            </div>
+        </section>
+        <section>
+            <div>
+                <h2>Details:</h2>
+                <p>
+                    <span>Aired:</span> Apr 5, 2009 to Jul 4, 2010<br>
+                    <span>Premiered:</span> Spring 2009<br>
+                    <span>Duration:</span> 24m<br>
+                    <span>Status:</span> Finished Airing<br>
+                    <span>IMDB Score:</span> 9.1/10<br>
+                    <span>Genre:</span> Action, Adventure, Comedy, Drama, Magic, Military, Fantasy, Shounen<br>
+                    <span>Studio:</span> Bones
+                </p>
+            </div>
+            <div class="trailer-heading">
+                <h2>Watch Trailer</h2>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/kx0nBaS_q50?si=_yZPGw1hRQ4RDfEm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
         </section>
     </main>
 </body>
