--- a/Anime_pages/mha.html
+++ b/Anime_pages/mha.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bleach:TYBW</title>
+    <title>My Hero Academaia</title>
     <link rel="stylesheet" href="../Anime-Head.css">
     <link rel="stylesheet" href="anime-page.css">
 </head>
@@ -42,13 +42,13 @@
     <main>
         <section>
             <div>
-                <img src="https://cdn.myanimelist.net/images/anime/1908/135431.jpg" alt="Bleach: TYBW">
+                <img src="https://cdn.myanimelist.net/images/anime/1959/151055.jpg" alt="MHA">
             </div>
             <div>
-                <h1>Bleach: Thousand Year Blood War</h1>
+                <h1>My Hero Academia: Final Season</h1>
                 <h3>Synopsis:</h3>
                 <p>
-                    Substitute Soul Reaper Ichigo Kurosaki spends his days fighting against Hollows, dangerous evil spirits that threaten Karakura Town. Ichigo carries out his quest with his closest allies: Orihime Inoue, his childhood friend with a talent for healing; Yasutora Sado, his high school classmate with superhuman strength; and Uryuu Ishida, Ichigo's Quincy rival. Ichigo's vigilante routine is disrupted by the sudden appearance of Asguiaro Ebern, a dangerous Arrancar who heralds the return of Yhwach, an ancient Quincy king. Yhwach seeks to reignite the historic blood feud between Soul Reaper and Quincy, and he sets his sights on erasing both the human world and the Soul Society for good. Yhwach launches a two-pronged invasion into both the Soul Society and Hueco Mundo, the home of Hollows and Arrancar. In retaliation, Ichigo and his friends must fight alongside old allies and enemies alike to end Yhwach's campaign of carnage before the world itself comes to an end.
+                    The appearance of "quirks," newly discovered super powers, has been steadily increasing over the years, with 80 percent of humanity possessing various abilities from manipulation of elements to shapeshifting. This leaves the remainder of the world completely powerless, and Izuku Midoriya is one such individual. Since he was a child, the ambitious middle schooler has wanted nothing more than to be a hero. Izuku's unfair fate leaves him admiring heroes and taking notes on them whenever he can. But it seems that his persistence has borne some fruit: Izuku meets the number one hero and his personal idol, All Might. All Might's quirk is a unique ability that can be inherited, and he has chosen Izuku to be his successor! Enduring many months of grueling training, Izuku enrolls in UA High, a prestigious high school famous for its excellent hero training program, and this year's freshmen look especially promising. With his bizarre but talented classmates and the looming threat of a villainous organization, Izuku will soon learn what it really means to be a hero.
                 </p>
             </div>
         </section>
@@ -56,18 +56,18 @@
             <div>
                 <h2>Details:</h2>
                 <p>
-                    <span>Aired:</span> Oct 10, 2022 to Present<br>
-                    <span>Premiered:</span> Fall 2022<br>
-                    <span>Duration:</span> 23m<br>
-                    <span>Status:</span> On Break<br>
-                    <span>IMDB Score:</span> 9.0/10<br>
-                    <span>Genre:</span> Action, Adventure, Comedy, Drama, Shounen<br>
-                    <span>Studio:</span> Studio Pierrot
+                    <span>Aired:</span> Oct 4, 2025 to Present<br>
+                    <span>Premiered:</span> Fall 2025<br>
+                    <span>Duration:</span> 24m<br>
+                    <span>Status:</span> Currently Airing<br>
+                    <span>IMDB Score:</span> 8.2/10<br>
+                    <span>Genre:</span> Action, School, Drama, Shounen<br>
+                    <span>Studio:</span> Bones
                 </p>
             </div>
             <div class="trailer-heading">
                 <h2>Watch Trailer</h2>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Pi_sIP-wjC0?si=pwjqQme1UG5Gcpjp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/zz37nGym3OQ?si=sWg_eDIwEyYATQG-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
     </main>
