--- a/Anime_pages/SpyxFamily.html
+++ b/Anime_pages/SpyxFamily.html
@@ -32,7 +32,9 @@
                 <a>Random</a>
                 <a href="login.html">Community</a>
             </div>
-            <input type="search" placeholder="Search Anime">
+            <form>
+                <input type="search" placeholder="Search Anime">
+            </form>
             <div>
                 <a href="login.html"><button class="sign">Sign In</button></a>
                 <a href="signup.html"><button class="sign">Sign Up</button></a>
