--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
                 <a style="padding-top: 2%">Random</a>
                 <a style="padding-top: 2%" href="login.html">Community</a>
             </div>
-            <input type="search" placeholder="Search Anime">
-            <div>
+            <form>
+                <input type="search" placeholder="Search Anime">
+            </form>
+            <div id="user">
                 <a href="login.html"><button class="sign">Sign In</button></a>
                 <a href="signup.html"><button class="sign">Sign Up</button></a>
             </div>
